--- a/grabels/installation-camera-securite-grabels.html
+++ b/grabels/installation-camera-securite-grabels.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>Installation Vidéosurveillance Grabels | ZOZO Sécurité - Devis Gratuit</title>
+    <title>Installateur Videosurveillance Grabels | Installation Video Surveillance - ZOZO Sécurité</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://zozosecurite.fr/grabels/installation-camera-securite-grabels.html">
@@ -15,8 +15,8 @@
     <link rel="shortcut icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Installation vidéosurveillance à Grabels par ZOZO Sécurité. Caméras IP 4K, surveillance 24/7, devis gratuit. Intervention rapide dans toute la commune de Grabels et environs.">
-    <meta name="keywords" content="installation vidéosurveillance grabels, caméras sécurité grabels, vidéosurveillance IP grabels, système sécurité grabels, installateur caméras grabels, télésurveillance grabels">
+    <meta name="description" content="Installateur videosurveillance Grabels ⭐ Installation video surveillance et caméras sécurité par ZOZO Sécurité. Devis gratuit, intervention rapide. Expert surveillance Grabels.">
+    <meta name="keywords" content="installation vidéosurveillance grabels, installateur videosurveillance grabels, installation video surveillance grabels, videosurveillance grabels, caméras sécurité grabels, vidéosurveillance IP grabels, système sécurité grabels, installateur caméras grabels, télésurveillance grabels, surveillance grabels, camera securite grabels">
     
     <!-- Critical SEO Enhancement -->
     <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
@@ -57,8 +57,8 @@
       "@type": "Service",
       "@id": "https://zozosecurite.fr/grabels/installation-camera-securite-grabels.html#service",
       "name": "Installation Vidéosurveillance Professionnelle Grabels",
-      "alternateName": "Système de Surveillance Grabels",
-      "description": "Installation complète de systèmes de vidéosurveillance professionnels à Grabels : caméras IP 4K, NVR haute capacité, surveillance 24/7, détection intelligente IA, accès distant sécurisé. Plus de 20 ans d'expertise. Devis gratuit et intervention rapide.",
+      "alternateName": ["Installateur Videosurveillance Grabels", "Installation Video Surveillance Grabels", "Videosurveillance Grabels", "Surveillance Grabels"],
+      "description": "Installateur videosurveillance Grabels expert en installation video surveillance. Système videosurveillance complet avec caméras IP 4K, surveillance 24/7, camera securite haute performance. Plus de 20 ans d'expertise à Grabels. Devis gratuit et intervention rapide.",
       "brand": {
         "@type": "Brand",
         "name": "ZOZO Sécurité"
@@ -917,6 +917,18 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- SEO Keywords Section -->
+    <section class="seo-keywords-section" style="padding: 3rem 0; background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);">
+        <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 2rem; text-align: center;">
+            <h2 style="color: #fff; margin-bottom: 2rem; font-size: 2rem;">Votre Installateur Videosurveillance à Grabels</h2>
+            <p style="color: rgba(255,255,255,0.8); font-size: 1.1rem; line-height: 1.6; max-width: 800px; margin: 0 auto;">
+                <strong>ZOZO Sécurité</strong>, expert en <strong>installation video surveillance</strong> à Grabels, vous accompagne dans tous vos projets de sécurité. 
+                Notre équipe d'<strong>installateur videosurveillance Grabels</strong> certifiée propose des solutions complètes de <strong>videosurveillance Grabels</strong> 
+                adaptées à vos besoins spécifiques. Découvrez notre expertise en <strong>surveillance Grabels</strong> et nos <strong>camera securite Grabels</strong> haute performance.
+            </p>
         </div>
     </section>
 
