--- a/grabels/installation-camera-securite-grabels.html
+++ b/grabels/installation-camera-securite-grabels.html
@@ -1039,7 +1039,7 @@
                         <article class="project-card active" data-slide="0">
                             <div class="project-image">
                                 <img src="entreprise-vidéosurveillancce-grabels_2.webp" 
-                                     alt="Installation vidéosurveillance résidentielle villa moderne Grabels" 
+                                     alt="Installation vidéosurveillance Grabels - Compagnie ambulances avec caméras Dahua HD" 
                                      width="400" height="300" loading="lazy">
                             </div>
                             <div class="project-info">
@@ -1059,7 +1059,7 @@
                         <article class="project-card" data-slide="1">
                             <div class="project-image">
                                 <img src="installation-vidéosurveillance-Grabels_3.webp" 
-                                     alt="Installation caméras sécurité commerce local Grabels" 
+                                     alt="Vidéosurveillance Grabels - Système multi-caméras parc véhicules ambulances" 
                                      width="400" height="300" loading="lazy">
                             </div>
                             <div class="project-info">
@@ -1079,7 +1079,7 @@
                         <article class="project-card" data-slide="2">
                             <div class="project-image">
                                 <img src="systèmes-sécurité-grabels_4.webp" 
-                                     alt="Système contrôle accès intelligent reconnaissance faciale Grabels" 
+                                     alt="Systèmes sécurité Grabels - Surveillance périmétrique caméras Dahua dôme" 
                                      width="400" height="300" loading="lazy">
                             </div>
                             <div class="project-info">
@@ -1099,7 +1099,7 @@
                         <article class="project-card" data-slide="3">
                             <div class="project-image">
                                 <img src="vidéoprotection-grabels_5.webp" 
-                                     alt="Surveillance périmétrique extérieure détection mouvement Grabels" 
+                                     alt="Vidéoprotection Grabels - Caméra surveillance escalier contrôle accès Dahua" 
                                      width="400" height="300" loading="lazy">
                             </div>
                             <div class="project-info">
@@ -1148,7 +1148,7 @@
                         <article class="mobile-project-card active" data-slide="0">
                             <div class="mobile-project-image">
                                 <img src="entreprise-vidéosurveillancce-grabels_2.webp" 
-                                     alt="Installation vidéosurveillance résidentielle villa moderne Grabels" 
+                                     alt="Installation vidéosurveillance Grabels - Compagnie ambulances avec caméras Dahua HD" 
                                      width="400" height="200" loading="lazy">
                             </div>
                             <div class="mobile-project-info">
@@ -1167,7 +1167,7 @@
                         <article class="mobile-project-card" data-slide="1">
                             <div class="mobile-project-image">
                                 <img src="installation-vidéosurveillance-Grabels_3.webp" 
-                                     alt="Installation caméras sécurité commerce local Grabels" 
+                                     alt="Vidéosurveillance Grabels - Système multi-caméras parc véhicules ambulances" 
                                      width="400" height="200" loading="lazy">
                             </div>
                             <div class="mobile-project-info">
@@ -1186,7 +1186,7 @@
                         <article class="mobile-project-card" data-slide="2">
                             <div class="mobile-project-image">
                                 <img src="systèmes-sécurité-grabels_4.webp" 
-                                     alt="Système contrôle accès intelligent reconnaissance faciale Grabels" 
+                                     alt="Systèmes sécurité Grabels - Surveillance périmétrique caméras Dahua dôme" 
                                      width="400" height="200" loading="lazy">
                             </div>
                             <div class="mobile-project-info">
@@ -1205,7 +1205,7 @@
                         <article class="mobile-project-card" data-slide="3">
                             <div class="mobile-project-image">
                                 <img src="vidéoprotection-grabels_5.webp" 
-                                     alt="Surveillance périmétrique extérieure détection mouvement Grabels" 
+                                     alt="Vidéoprotection Grabels - Caméra surveillance escalier contrôle accès Dahua" 
                                      width="400" height="200" loading="lazy">
                             </div>
                             <div class="mobile-project-info">
