--- a/index.html
+++ b/index.html
@@ -1741,7 +1741,7 @@
         <!-- Footer Bottom -->
         <div class="footer-bottom">
             <div class="footer-container">
-                <p>&copy; 2025 <span itemprop="name">ZOZO Sécurité</span>. Tous droits réservés.</p>
+                <p>&copy; 2025 <span itemprop="name">ZOZO Sécurité</span>. Tous droits réservés. • Site web créé avec ❤️ par <a href="https://www.agencehyperweb.com" target="_blank" rel="noopener">HyperWeb</a></p>
                 <p class="footer-description">
                     Spécialiste en installation de <strong>vidéosurveillance à Montpellier</strong> et dans l'Hérault. 
                     Solutions de sécurité professionnelles pour entreprises, commerces et particuliers.
