--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -94,5 +94,10 @@
         </svg>
         Demander un devis
     </a>
+
+    <!-- Footer -->
+    <footer class="site-footer" style="margin-top: 40px; padding: 20px; text-align: center; background-color: #f8f9fa; border-top: 1px solid #e9ecef;">
+        <p>&copy; 2025 ZOZO Sécurité. Tous droits réservés. • Site web créé avec ❤️ par <a href="https://www.agencehyperweb.com" target="_blank" rel="noopener">HyperWeb</a></p>
+    </footer>
 </body>
 </html>
