--- a/services/videosurveillance.html
+++ b/services/videosurveillance.html
@@ -565,7 +565,7 @@
 
     <!-- Footer -->
     <footer class="site-footer">
-        <p>&copy; 2025 Zozo Sécurité. Tous droits réservés.</p>
+        <p>&copy; 2025 Zozo Sécurité. Tous droits réservés. • Site web créé avec ❤️ par <a href="https://www.agencehyperweb.com" target="_blank" rel="noopener">HyperWeb</a></p>
         <p class="footer-links">
             <a href="../mentions-legales.html">Mentions Légales</a> |
             <a href="../politique-confidentialite.html">Politique de Confidentialité</a> |
