--- a/montpellier/installation-camera-securite-montpellier.html
+++ b/montpellier/installation-camera-securite-montpellier.html
@@ -767,7 +767,7 @@
 
         <div class="footer-bottom">
             <div class="footer-container">
-                <p>&copy; 2025 ZOZO SÉCURITÉ - Tous droits réservés</p>
+                <p>&copy; 2025 ZOZO SÉCURITÉ - Tous droits réservés • Site web créé avec ❤️ par <a href="https://www.agencehyperweb.com" target="_blank" rel="noopener">HyperWeb</a></p>
             </div>
         </div>
     </footer>
