--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "5.0",
-        "reviewCount": "50",
+        "reviewCount": "60",
         "bestRating": "5",
         "worstRating": "1"
       },
@@ -1205,7 +1205,7 @@
                         </div>
                         <span class="rating-text">5.0</span>
                     </div>
-                    <span class="review-count">50+ avis</span>
+                    <span class="review-count">60+ avis</span>
                 </div>
             </div>
 
@@ -1713,6 +1713,7 @@
                     <ul>
                         <li><a href="montpellier/installation-camera-securite-montpellier.html" itemprop="areaServed">Montpellier</a></li>
                         <li><a href="grabels/installation-camera-securite-grabels.html" itemprop="areaServed">Grabels</a></li>
+                        <li><a href="nimes/installation-camera-securite-nimes.html" itemprop="areaServed">Nîmes</a></li>
                         <li><span itemprop="areaServed">Castelnau-le-Lez</span></li>
                         <li><span itemprop="areaServed">Lattes</span></li>
                         <li><span itemprop="areaServed">Pérols</span></li>
