--- a/faq.html
+++ b/faq.html
@@ -35,7 +35,20 @@
     <!-- Umami Analytics -->
     <script defer src="https://cloud.umami.is/script.js" data-website-id="25b9aa4e-fff5-4000-bc16-1317c550461e"></script>
     
-
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="FAQ vidéosurveillance | Zozo Sécurité Montpellier">
+    <meta property="og:description" content="Réponses prix, légalité, maintenance des caméras de surveillance en Occitanie.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://zozosecurite.fr/faq.html">
+    <meta property="og:image" content="https://zozosecurite.fr/images/zozosécuritélogo.jpg">
+    <meta property="og:site_name" content="Zozo Sécurité">
+    <meta property="og:locale" content="fr_FR">
+    
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="FAQ vidéosurveillance | Zozo Sécurité Montpellier">
+    <meta name="twitter:description" content="Réponses prix, légalité, maintenance des caméras de surveillance en Occitanie.">
+    <meta name="twitter:image" content="https://zozosecurite.fr/images/zozosécuritélogo.jpg">
 
     <script type="application/ld+json">
     {
