--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -14,6 +14,61 @@
     <script defer src="https://cloud.umami.is/script.js" data-website-id="25b9aa4e-fff5-4000-bc16-1317c550461e"></script>
     <!-- Bing Webmaster Tools -->
     <meta name="msvalidate.01" content="D8B8E351453FE5423D10FC62F1D318E0" />
+    
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "@id": "https://zozosecurite.fr",
+        "name": "Zozo Sécurité",
+        "legalName": "Mir mohammadi azghandi seyed ahmad",
+        "url": "https://zozosecurite.fr",
+        "logo": "https://zozosecurite.fr/images/zozosécuritélogo.jpg",
+        "description": "Spécialiste en installation de systèmes de vidéosurveillance et sécurité à Montpellier et environs.",
+        "telephone": "",
+        "email": "zozosecuritefr@gmail.com",
+        "foundingDate": "2023",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "1 place Charles de Gaulle",
+            "addressLocality": "Castelnau-le-Lez",
+            "postalCode": "34170",
+            "addressCountry": "FR"
+        },
+        "areaServed": [
+            {
+                "@type": "City",
+                "name": "Montpellier"
+            },
+            {
+                "@type": "City", 
+                "name": "Castelnau-le-Lez"
+            },
+            {
+                "@type": "City",
+                "name": "Grabels"
+            },
+            {
+                "@type": "City",
+                "name": "Nîmes"
+            }
+        ],
+        "serviceType": [
+            "Installation de vidéosurveillance",
+            "Systèmes de sécurité",
+            "Caméras de surveillance",
+            "Alarmes"
+        ],
+        "priceRange": "€€",
+        "identifier": {
+            "@type": "PropertyValue",
+            "name": "SIRET",
+            "value": "917 897 555 00020"
+        }
+    }
+    </script>
+    
     <style>
         /* Add some basic styling for readability */
         body { padding: 2rem; line-height: 1.6; color: #eee; background-color: #1a1a1a; } /* Adjusted for dark theme */
