--- a/index.html
+++ b/index.html
@@ -506,74 +506,74 @@
             <div class="logo-track">
                 <!-- First set of logos -->
                 <div class="partner-logo">
-                    <a href="https://www.lidl.fr" target="_blank" rel="noopener">
+                    <a href="https://www.lidl.fr" target="_blank" rel="sponsored nofollow noopener">
                         <img src="images/Lidl.webp" alt="Magasin Lidl – installation vidéosurveillance complète" loading="lazy" width="225" height="225">
                     </a>
                 </div>
                 <div class="partner-logo">
-                    <a href="https://www.but.fr" target="_blank" rel="noopener">
+                    <a href="https://www.but.fr" target="_blank" rel="sponsored nofollow noopener">
                         <img src="images/BUT.webp" alt="Magasin BUT – installation système de sécurité" loading="lazy" width="225" height="225">
                     </a>
                 </div>
                 <div class="partner-logo">
-                    <a href="https://www.bulgari.com" target="_blank" rel="noopener">
+                    <a href="https://www.bulgari.com" target="_blank" rel="sponsored nofollow noopener">
                         <img src="images/bvlgari.webp" alt="Boutique Bulgari – mise en place sécurité avancée" loading="lazy">
                     </a>
                 </div>
                 <div class="partner-logo">
-                    <a href="https://www.sephora.fr" target="_blank" rel="noopener">
+                    <a href="https://www.sephora.fr" target="_blank" rel="sponsored nofollow noopener">
                         <img src="images/sephora.webp" alt="Magasin Sephora – solution de vidéosurveillance" loading="lazy">
                     </a>
                 </div>
                 <div class="partner-logo">
-                    <a href="https://www.aramisauto.com" target="_blank" rel="noopener">
+                    <a href="https://www.aramisauto.com" target="_blank" rel="sponsored nofollow noopener">
                         <img src="images/aramisauto.webp" alt="Agence Aramisauto – installation caméras de surveillance" loading="lazy" width="225" height="127">
                     </a>
                 </div>
                 <div class="partner-logo">
-                    <a href="https://www.le-kiosque-a-pizzas.com" target="_blank" rel="noopener">
+                    <a href="https://www.le-kiosque-a-pizzas.com" target="_blank" rel="sponsored nofollow noopener">
                         <img src="images/kiosque.webp" alt="Kiosque à Pizzas – système de sécurité compact" fetchpriority="high">
                     </a>
                 </div>
                 <div class="partner-logo">
-                    <a href="https://www.aldi.fr" target="_blank" rel="noopener">
+                    <a href="https://www.aldi.fr" target="_blank" rel="sponsored nofollow noopener">
                         <img src="images/Aldi.webp" alt="Magasin Aldi – installation caméras de surveillance" loading="lazy">
                     </a>
                 </div>
                 
                 <!-- Duplicate set for seamless carousel loop animation -->
                 <div class="partner-logo">
-                    <a href="https://www.lidl.fr" target="_blank" rel="noopener">
+                    <a href="https://www.lidl.fr" target="_blank" rel="sponsored nofollow noopener">
                         <img src="images/Lidl.webp" alt="Magasin Lidl – installation vidéosurveillance complète" loading="lazy" width="225" height="225">
                     </a>
                 </div>
                 <div class="partner-logo">
-                    <a href="https://www.but.fr" target="_blank" rel="noopener">
+                    <a href="https://www.but.fr" target="_blank" rel="sponsored nofollow noopener">
                         <img src="images/BUT.webp" alt="Magasin BUT – installation système de sécurité" loading="lazy" width="225" height="225">
                     </a>
                 </div>
                 <div class="partner-logo">
-                    <a href="https://www.bulgari.com" target="_blank" rel="noopener">
+                    <a href="https://www.bulgari.com" target="_blank" rel="sponsored nofollow noopener">
                         <img src="images/bvlgari.webp" alt="Boutique Bulgari – mise en place sécurité avancée" loading="lazy">
                     </a>
                 </div>
                 <div class="partner-logo">
-                    <a href="https://www.sephora.fr" target="_blank" rel="noopener">
+                    <a href="https://www.sephora.fr" target="_blank" rel="sponsored nofollow noopener">
                         <img src="images/sephora.webp" alt="Magasin Sephora – solution de vidéosurveillance" loading="lazy">
                     </a>
                 </div>
                 <div class="partner-logo">
-                    <a href="https://www.aramisauto.com" target="_blank" rel="noopener">
+                    <a href="https://www.aramisauto.com" target="_blank" rel="sponsored nofollow noopener">
                         <img src="images/aramisauto.webp" alt="Agence Aramisauto – installation caméras de surveillance" loading="lazy" width="225" height="127">
                     </a>
                 </div>
                 <div class="partner-logo">
-                    <a href="https://www.le-kiosque-a-pizzas.com" target="_blank" rel="noopener">
+                    <a href="https://www.le-kiosque-a-pizzas.com" target="_blank" rel="sponsored nofollow noopener">
                         <img src="images/kiosque.webp" alt="Kiosque à Pizzas – système de sécurité compact" fetchpriority="high">
                     </a>
                 </div>
                 <div class="partner-logo">
-                    <a href="https://www.aldi.fr" target="_blank" rel="noopener">
+                    <a href="https://www.aldi.fr" target="_blank" rel="sponsored nofollow noopener">
                         <img src="images/Aldi.webp" alt="Magasin Aldi – installation caméras de surveillance" loading="lazy">
                     </a>
                 </div>
