--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,17 @@
     </script>
     
     <!-- Umami Analytics -->
+
+    <!-- Microsoft Clarity Analytics -->
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "t7hhfyxgp8");
+    </script>
     <script defer src="https://cloud.umami.is/script.js" data-website-id="25b9aa4e-fff5-4000-bc16-1317c550461e"></script>
+
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
