--- a/grabels/installation-camera-securite-grabels.html
+++ b/grabels/installation-camera-securite-grabels.html
@@ -1296,6 +1296,55 @@
             </div>
         </div>
     </section>
+
+    <!-- Locations and Contact Section -->
+    <section id="contact" class="locations-section">
+        <h3>Notre Emplacement</h3>
+        <p class="locations-subtitle">Trouvez-nous facilement</p>
+        <div class="locations-container">
+            <div class="location-card">
+                <div class="location-icon">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7z" />
+                        <circle cx="12" cy="9" r="2.5" />
+                    </svg>
+                </div>
+                <h4 id="grabels-location">Grabels</h4>
+                <p>Hérault</p>
+            </div>
+            <div class="location-card">
+                <div class="location-icon">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7z" />
+                        <circle cx="12" cy="9" r="2.5" />
+                    </svg>
+                </div>
+                <h4 id="castelnau-location">Castelnau-le-Lez</h4>
+                <p>Hérault</p>
+            </div>
+        </div>
+
+        <!-- Google Maps Integration with Liquid Glass Styling -->
+        <div class="map-container-wrapper">
+            <div class="map-glass-container">
+                <div class="map-loading-state" id="mapLoadingState">
+                    <div class="loading-spinner"></div>
+                    <p>Chargement de la carte...</p>
+                </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2887.949094106259!2d3.8946610762981178!3d43.6284184540332!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x49ed7653702ef0fb%3A0xbca1b54e04fc474a!2zWk9aTyBTw6ljdXJpdMOp!5e0!3m2!1sfr!2sfr!4v1751457570179!5m2!1sfr!2sfr"
+                        width="600"
+                        height="450"
+                        style="border:0;"
+                        allowfullscreen=""
+                        loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"
+                        onload="window.hideMapLoading ? hideMapLoading() : null"
+                        title="Localisation ZOZO Sécurité - Service Installation Caméras Grabels">
+                </iframe>
+            </div>
+        </div>
+    </section>
+
     <!-- SEO Optimized Footer -->
     <footer class="site-footer" itemscope itemtype="http://schema.org/LocalBusiness">
         <div class="footer-container">
