--- a/faq.html
+++ b/faq.html
@@ -15,6 +15,10 @@
     <meta name="geo.placename" content="Castelnau-le-Lez, France">
     <!-- Bing Webmaster Tools -->
     <meta name="msvalidate.01" content="D8B8E351453FE5423D10FC62F1D318E0" />
+
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="bgy7/Ehcegm/pKlFBFGOtA" async></script>
+
     <link rel="canonical" href="https://zozosecurite.fr/faq.html">
     <link rel="stylesheet" href="css/styles.css?v=2.1">
     <link rel="stylesheet" href="css/navigation.css?v=2.0">
