--- a/nimes/installation-camera-securite-nimes.html
+++ b/nimes/installation-camera-securite-nimes.html
@@ -29,7 +29,10 @@
     
     <!-- Bing Webmaster Tools -->
     <meta name="msvalidate.01" content="D8B8E351453FE5423D10FC62F1D318E0" />
-    
+
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="bgy7/Ehcegm/pKlFBFGOtA" async></script>
+
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Installation Vidéosurveillance Nîmes | ZOZO Sécurité">
     <meta property="og:description" content="Expert en installation de systèmes de vidéosurveillance à Nîmes. Devis gratuit et intervention rapide.">
