--- a/services/installateur-videosurveillance-entrepots-montpellier.html
+++ b/services/installateur-videosurveillance-entrepots-montpellier.html
@@ -38,6 +38,10 @@
     <meta name="geo.placename" content="Castelnau-le-Lez, France">
     <!-- Bing Webmaster Tools -->
     <meta name="msvalidate.01" content="D8B8E351453FE5423D10FC62F1D318E0" />
+
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="bgy7/Ehcegm/pKlFBFGOtA" async></script>
+
     <meta property="og:title" content="Installation Vidéosurveillance Entrepôt - ZOZO Sécurité">
     <meta property="og:description" content="Solutions complètes de vidéosurveillance pour entrepôts avec expertise technique avancée">
     <meta property="og:image" content="../images/og-image.webp">
