--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,10 @@
     <meta name="geo.placename" content="Castelnau-le-Lez, France">
     <!-- Bing Webmaster Tools -->
     <meta name="msvalidate.01" content="D8B8E351453FE5423D10FC62F1D318E0" />
+
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="bgy7/Ehcegm/pKlFBFGOtA" async></script>
+
     <link rel="canonical" href="https://zozosecurite.fr/blog.html">
     
     <!-- Google Fonts -->
