--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,9 @@
     
     <!-- Bing Webmaster Tools -->
     <meta name="msvalidate.01" content="D8B8E351453FE5423D10FC62F1D318E0" />
+
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="bgy7/Ehcegm/pKlFBFGOtA" async></script>
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Contact - Zozo Sécurité | Vidéosurveillance Montpellier">
