--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
-    
+
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="bgy7/Ehcegm/pKlFBFGOtA" async></script>
+
     <!-- Optimized inline SVG icons (replaces Font Awesome for better performance) -->
     <style>
         .icon {
