--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -10,6 +10,9 @@
     <link rel="icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
     <link rel="shortcut icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
     
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="bgy7/Ehcegm/pKlFBFGOtA" async></script>
+
     <!-- Umami Analytics -->
 
     <!-- Microsoft Clarity Analytics -->
