building the interphone page

--- a/montpellier/installation-camera-securite-montpellier.html
+++ b/montpellier/installation-camera-securite-montpellier.html
@@ -145,8 +145,9 @@
       "@id": "https://zozosecurite.fr/montpellier/installation-camera-securite-montpellier.html#reviews",
       "itemReviewed": {
         "@type": "LocalBusiness",
+        "@id": "https://zozosecurite.fr#montpellier-local-business",
         "name": "ZOZO Sécurité - Installation Vidéosurveillance Montpellier",
-        "@id": "https://zozosecurite.fr#montpellier-business"
+        "url": "https://zozosecurite.fr/montpellier/installation-camera-securite-montpellier.html"
       },
       "reviewBody": "Installation parfaite de notre système de vidéosurveillance à Montpellier. L'équipe ZOZO Sécurité est très professionnelle, ponctuelle et explique bien le fonctionnement. Matériel de qualité Dahua avec une excellente qualité d'image jour et nuit. Je recommande vivement pour tous projets de sécurité sur Montpellier et sa métropole.",
       "name": "Installation vidéosurveillance Montpellier - Service excellent",
