--- a/nimes/installation-camera-securite-nimes.html
+++ b/nimes/installation-camera-securite-nimes.html
@@ -282,8 +282,17 @@
       "@id": "https://zozosecurite.fr/nimes/installation-camera-securite-nimes.html#reviews",
       "itemReviewed": {
         "@type": "LocalBusiness",
+        "@id": "https://zozosecurite.fr#nimes-business",
         "name": "ZOZO Sécurité - Installation Vidéosurveillance Nîmes",
-        "@id": "https://zozosecurite.fr#nimes-business"
+        "url": "https://zozosecurite.fr/nimes/installation-camera-securite-nimes.html",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "1 place charles de gaulle",
+          "addressLocality": "Castelnau-le-Lez",
+          "postalCode": "34170",
+          "addressCountry": "FR"
+        },
+        "telephone": "+33767563926"
       },
       "reviewBody": "Installation parfaite de notre système de vidéosurveillance à Nîmes. L'équipe ZOZO Sécurité est très professionnelle, ponctuelle et explique bien le fonctionnement. Matériel de qualité Dahua avec une excellente qualité d'image jour et nuit. Je recommande vivement pour tous projets de sécurité sur Nîmes et environs.",
       "name": "Installation vidéosurveillance Nîmes - Service excellent",
