making the website better

--- a/interphone-montpellier/installation-interphone-montpellier.html
+++ b/interphone-montpellier/installation-interphone-montpellier.html
@@ -402,20 +402,10 @@
                 "durationOfWarranty": "P2Y",
                 "warrantyScope": "Installation complète avec connexion portail"
             },
-            "includesObject": [
-                {
-                    "@type": "Product",
-                    "name": "Installation portail automatique"
-                },
-                {
-                    "@type": "Product",
-                    "name": "2 badges RFID"
-                },
-                {
-                    "@type": "Product",
-                    "name": "Application mobile iOS/Android"
-                }
-            ]
+            "isAccessoryOrSparePartFor": {
+                "@type": "Product",
+                "name": "Portail automatique résidentiel"
+            }
         },
         "additionalProperty": [
             {
