changed the favicon

--- a/faq.html
+++ b/faq.html
@@ -23,8 +23,12 @@
     <link rel="stylesheet" href="css/styles.css?v=2.1">
     <link rel="stylesheet" href="css/navigation.css?v=2.0">
     <link rel="stylesheet" href="css/faq.css?v=1.0">
-    <link rel="icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="logo-zozosécurité-favico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="logo-zozosécurité-favico/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="logo-zozosécurité-favico/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="logo-zozosécurité-favico/apple-touch-icon.png">
+    <link rel="manifest" href="logo-zozosécurité-favico/site.webmanifest">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DERWVMJ868"></script>
