--- a/interphone-montpellier/installation-interphone-montpellier.html
+++ b/interphone-montpellier/installation-interphone-montpellier.html
@@ -45,6 +45,13 @@
     <!-- Critical CSS Inlined - Basic reset only -->
     <style>*{margin:0;padding:0;box-sizing:border-box;font-family:'Inter','Inter-fallback',-apple-system,BlinkMacSystemFont,sans-serif}@font-face{font-family:'Inter-fallback';size-adjust:107%;ascent-override:90%;descent-override:22%;line-gap-override:0%;src:local('Arial');font-display:swap}body{background:#000;color:#fff;overflow-x:hidden;text-rendering:optimizeSpeed}html{scroll-behavior:smooth}</style>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="../logo-zozosécurité-favico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="../logo-zozosécurité-favico/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../logo-zozosécurité-favico/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../logo-zozosécurité-favico/apple-touch-icon.png">
+    <link rel="manifest" href="../logo-zozosécurité-favico/site.webmanifest">
+
     <!-- Defer non-critical CSS -->
     <link rel="preload" href="../css/styles.css?v=2.2" as="style" onload="this.onload=null;this.rel='stylesheet'" fetchpriority="high">
     <noscript><link rel="stylesheet" href="../css/styles.css?v=2.2"></noscript>
