--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -7,8 +7,12 @@
     <meta name="description" content="Consultez les mentions légales de Zozo Sécurité, incluant les informations sur l'éditeur du site, l'hébergement et la direction de la publication.">
     <link rel="canonical" href="https://zozosecurite.fr/mentions-legales.html">
     <link rel="stylesheet" href="css/styles.css?v=2.1"> <!-- Link to your main CSS -->
-    <link rel="icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="logo-zozosécurité-favico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="logo-zozosécurité-favico/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="logo-zozosécurité-favico/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="logo-zozosécurité-favico/apple-touch-icon.png">
+    <link rel="manifest" href="logo-zozosécurité-favico/site.webmanifest">
     
     <!-- Ahrefs Analytics -->
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="bgy7/Ehcegm/pKlFBFGOtA" async></script>
