--- a/montpellier/installation-camera-securite-montpellier.html
+++ b/montpellier/installation-camera-securite-montpellier.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="montpellier.css">
     
     <!-- Favicon -->
-    <link rel="icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="../logo-zozosécurité-favico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="../logo-zozosécurité-favico/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../logo-zozosécurité-favico/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../logo-zozosécurité-favico/apple-touch-icon.png">
+    <link rel="manifest" href="../logo-zozosécurité-favico/site.webmanifest">
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Installation vidéosurveillance à Montpellier par ZOZO Sécurité. Caméras IP 4K, surveillance 24/7, devis gratuit. Intervention rapide dans toute la métropole de Montpellier.">
