--- a/blog.html
+++ b/blog.html
@@ -46,8 +46,11 @@
     </style>
     
     <!-- Favicon -->
-    <link rel="icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="logo-zozosécurité-favico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="logo-zozosécurité-favico/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="logo-zozosécurité-favico/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="logo-zozosécurité-favico/apple-touch-icon.png">
+    <link rel="manifest" href="logo-zozosécurité-favico/site.webmanifest">
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Blog Zozo Sécurité : conseils d'experts en vidéosurveillance, sécurité et installation de caméras à Montpellier. Guides pratiques et actualités sécurité.">
