--- a/grabels/installation-camera-securite-grabels.html
+++ b/grabels/installation-camera-securite-grabels.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="grabels.css">
     
     <!-- Favicon -->
-    <link rel="icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="../logo-zozosécurité-favico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="../logo-zozosécurité-favico/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../logo-zozosécurité-favico/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../logo-zozosécurité-favico/apple-touch-icon.png">
+    <link rel="manifest" href="../logo-zozosécurité-favico/site.webmanifest">
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Installateur videosurveillance Grabels ⭐ Installation video surveillance et caméras sécurité par ZOZO Sécurité. Devis gratuit, intervention rapide. Expert surveillance Grabels.">
