--- a/index.html
+++ b/index.html
@@ -108,8 +108,11 @@
     <!-- Custom Icon Styles - Replaces Font Awesome (167 KiB savings) -->
     <style>.icon-arrow-right,.icon-video{display:inline-block;width:1em;height:1em;vertical-align:middle}</style>
     <!-- Favicon -->
-    <link rel="icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="logo-zozosécurité-favico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="logo-zozosécurité-favico/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="logo-zozosécurité-favico/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="logo-zozosécurité-favico/apple-touch-icon.png">
+    <link rel="manifest" href="logo-zozosécurité-favico/site.webmanifest">
     <!-- SEO Meta Tags -->
     <meta name="description" content="ZOZO Sécurité, installation vidéosurveillance Montpellier. Caméras IP, DVR/NVR, câblage réseau. +500 installations Hérault. Devis gratuit : 07 67 56 39 26">
     <meta name="keywords" content="sécurité, vidéosurveillance, installation caméras, DVR, NVR, câblage réseau, baie de brassage, Montpellier">
