--- a/services/installateur-videosurveillance-entrepots-montpellier.html
+++ b/services/installateur-videosurveillance-entrepots-montpellier.html
@@ -23,8 +23,11 @@
         }
     </style> 
     <!-- Favicon -->
-    <link rel="icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="../logo-zozosécurité-favico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="../logo-zozosécurité-favico/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../logo-zozosécurité-favico/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../logo-zozosécurité-favico/apple-touch-icon.png">
+    <link rel="manifest" href="../logo-zozosécurité-favico/site.webmanifest">
     <!-- SEO Meta Tags -->
     <meta name="description" content="Installation vidéosurveillance entrepôt : sécurisation complète avec caméras IP 4K, détection intelligente, surveillance 24/7. Solutions professionnelles pour entrepôts et zones logistiques.">
     <meta name="keywords" content="vidéosurveillance entrepôt, caméras entrepôt, sécurité entrepôt, surveillance logistique, caméras industrielles, IP 4K entrepôt, protection stockage">
