--- a/services/videosurveillance.html
+++ b/services/videosurveillance.html
@@ -10,8 +10,11 @@
     <link rel="stylesheet" href="../css/navigation.css?v=2.0">
     <link rel="stylesheet" href="../css/videosurveillance.css"> 
     <!-- Favicon -->
-    <link rel="icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="../logo-zozosécurité-favico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="../logo-zozosécurité-favico/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../logo-zozosécurité-favico/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../logo-zozosécurité-favico/apple-touch-icon.png">
+    <link rel="manifest" href="../logo-zozosécurité-favico/site.webmanifest">
     <!-- SEO Meta Tags -->
     <meta name="description" content="Expert en installation vidéosurveillance : caméras IP 4K, systèmes DVR/NVR, intelligence artificielle, détection thermique. Solutions professionnelles pour commerces et résidences.">
     <meta name="keywords" content="vidéosurveillance, caméras IP, DVR, NVR, installation sécurité, Hikvision, Dahua, intelligence artificielle, détection thermique">
