--- a/thank-you.html
+++ b/thank-you.html
@@ -10,8 +10,11 @@
     <link rel="stylesheet" href="css/thankyou.css?v=1.0">
     
     <!-- Favicon -->
-    <link rel="icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="logo-zozosécurité-favico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="logo-zozosécurité-favico/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="logo-zozosécurité-favico/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="logo-zozosécurité-favico/apple-touch-icon.png">
+    <link rel="manifest" href="logo-zozosécurité-favico/site.webmanifest">
 
     <!-- Ahrefs Analytics -->
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="bgy7/Ehcegm/pKlFBFGOtA" async></script>
