--- a/index.html
+++ b/index.html
@@ -363,6 +363,18 @@
         <div class="hero-content">
             <h1 class="hero-title">Installation <span class="highlight-word">Vidéosurveillance</span> Montpellier - Expert <span class="highlight-word">Caméras Sécurité</span> Hérault</h1>
             <p class="hero-subtitle">Protection vidéosurveillance à Montpellier complète pour votre maison ou entreprise. <strong>Plus de 500 clients protégés</strong>. Devis gratuit sous <span class="highlight-montpellier">24h</span>.</p>
+
+            <!-- Small review badge (mobile only) -->
+            <div class="small-review-badge-hero">
+                ⭐⭐⭐⭐⭐ 5.0 • +70 avis clients satisfaits
+                <svg width="14" height="14" viewBox="0 0 24 24" fill="none" style="margin-left: 4px; vertical-align: middle;">
+                    <path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"/>
+                    <path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"/>
+                    <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"/>
+                    <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"/>
+                </svg>
+            </div>
+
             <div class="cta-buttons">
                 <a href="contact.html#secure-contact-form" class="main-cta">Demander un devis gratuit</a>
             </div>
@@ -412,7 +424,7 @@
                                 <div class="icon-glow"></div>
                             </div>
                             <div class="about-text-block">
-                                <h3>Plus de 500 installations réalisées</h3>
+                                <h3>Plus de 500 installations caméra surveillance réalisées</h3>
                                 <p>Nous avons équipé des centaines de clients dans l'Hérault, des petits commerces aux grandes enseignes comme Lidl, BUT, et Sephora.</p>
                             </div>
                         </div>
@@ -1889,106 +1901,6 @@
         });
     </script>
 
-    <!-- Floating Quote Request Button -->
-    <div id="floating-quote-btn" class="floating-quote-btn">
-        <a href="contact.html" class="quote-btn-link">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M14.828 14.828a4 4 0 01-5.656 0M9 10h1M15 10h1M21 12c0 4.97-4.03 9-9 9s-9-4.03-9-9 4.03-9 9-9 9 4.03 9 9z"/>
-            </svg>
-            <span>Demander un devis gratuit</span>
-        </a>
-    </div>
-
-    <style>
-        .floating-quote-btn {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            z-index: 1000;
-            opacity: 0;
-            transform: translateY(100px);
-            transition: all 0.3s ease;
-        }
-
-        .floating-quote-btn.show {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        .quote-btn-link {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            background: linear-gradient(135deg, #FF3333, #FF1111);
-            color: white;
-            padding: 15px 20px;
-            border-radius: 50px;
-            text-decoration: none;
-            font-weight: 600;
-            font-size: 14px;
-            box-shadow: 0 4px 20px rgba(255, 51, 51, 0.3);
-            transition: all 0.3s ease;
-            white-space: nowrap;
-        }
-
-        .quote-btn-link:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 25px rgba(255, 51, 51, 0.4);
-            background: linear-gradient(135deg, #FF1111, #CC0000);
-        }
-
-        .quote-btn-link svg {
-            flex-shrink: 0;
-        }
-
-        @media (max-width: 768px) {
-            .floating-quote-btn {
-                bottom: 15px;
-                right: 15px;
-            }
-
-            .quote-btn-link {
-                padding: 12px 16px;
-                font-size: 13px;
-            }
-
-            .quote-btn-link span {
-                display: none;
-            }
-
-            .quote-btn-link {
-                border-radius: 50%;
-                width: 50px;
-                height: 50px;
-                justify-content: center;
-            }
-        }
-    </style>
-
-    <script>
-        // Show floating button after page loads and user scrolls
-        document.addEventListener('DOMContentLoaded', function() {
-            const floatingBtn = document.getElementById('floating-quote-btn');
-
-            // Show button after 2 seconds or when user scrolls
-            let hasShown = false;
-
-            function showButton() {
-                if (!hasShown) {
-                    floatingBtn.classList.add('show');
-                    hasShown = true;
-                }
-            }
-
-            setTimeout(showButton, 2000);
-
-            window.addEventListener('scroll', function() {
-                if (window.scrollY > 100) {
-                    showButton();
-                }
-            });
-        });
-    </script>
 
 </body>
 </html>
