--- a/index.html
+++ b/index.html
@@ -711,32 +711,6 @@
             <p class="gallery-subtitle">Découvrez nos installations de sécurité et infrastructures réseau</p>
         </div>
 
-        <!-- Category Filters -->
-        <div class="gallery-filters">
-            <button class="filter-btn active" data-category="all">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
-                    <path d="M9 9h6v6H9z"/>
-                </svg>
-                Tout afficher
-            </button>
-            <button class="filter-btn" data-category="videosurveillance">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <circle cx="12" cy="12" r="3"/>
-                    <path d="M20 12c0-4.42-3.58-8-8-8s-8 3.58-8 8 3.58 8 8 8 8-3.58 8-8z"/>
-                </svg>
-                Vidéosurveillance
-            </button>
-            <button class="filter-btn" data-category="network">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
-                    <line x1="3" y1="9" x2="21" y2="9"/>
-                    <line x1="9" y1="3" x2="9" y2="21"/>
-                </svg>
-                Réseau & Câblage
-            </button>
-        </div>
-
         <!-- Enhanced Gallery Slider -->
         <div class="enhanced-gallery-container">
             <!-- Progress Bar -->
@@ -1294,7 +1268,49 @@
                     </div>
                 </div>
 
-                <!-- NEW Review 2: Installation entrepôt -->
+                <!-- NEW Review 2: Goodlign - Syndic Sud France -->
+                <div class="review-card">
+                    <div class="review-header">
+                        <div class="reviewer-avatar reviewer-avatar-blue">G</div>
+                        <div class="reviewer-info">
+                            <div class="reviewer-name">Goodlign</div>
+                            <div class="review-date">Il y a 1 jour</div>
+                        </div>
+                        <span class="new-badge">NOUVEAU</span>
+                    </div>
+                    <div class="review-rating">
+                        <svg class="star" viewBox="0 0 24 24">
+                            <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
+                        </svg>
+                        <svg class="star" viewBox="0 0 24 24">
+                            <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
+                        </svg>
+                        <svg class="star" viewBox="0 0 24 24">
+                            <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
+                        </svg>
+                        <svg class="star" viewBox="0 0 24 24">
+                            <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
+                        </svg>
+                        <svg class="star" viewBox="0 0 24 24">
+                            <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
+                        </svg>
+                    </div>
+                    <div class="review-text" data-full-text="Excellent travail de la part de Zozo Sécurité ! Équipe très professionnelle, installation propre et rapide. En tant que syndic de plusieurs résidences dans le sud de la France, c'est de loin la meilleure société avec laquelle j'ai travaillé. J'ai tellement apprécié leur travail que je ferai appel à eux pour mes prochains projets. Merci aussi pour la caméra offerte !">
+                        Excellent travail de la part de Zozo Sécurité ! Équipe très professionnelle, installation propre et rapide. En tant que syndic de plusieurs résidences dans le sud de la France, c'est de loin la meilleure société avec laquelle j'ai travaillé...
+                        <button class="read-more-btn" onclick="toggleReviewText(this)">Lire plus</button>
+                    </div>
+                    <div class="google-badge">
+                        <svg class="google-icon" viewBox="0 0 24 24" fill="none">
+                            <path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"/>
+                            <path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"/>
+                            <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"/>
+                            <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"/>
+                        </svg>
+                        Publié sur Google
+                    </div>
+                </div>
+
+                <!-- NEW Review 3: Installation entrepôt -->
                 <div class="review-card">
                     <div class="review-header">
                         <div class="reviewer-avatar reviewer-avatar-orange">ZJ</div>
