--- a/services/installateur-videosurveillance-entrepots-montpellier.html
+++ b/services/installateur-videosurveillance-entrepots-montpellier.html
@@ -187,34 +187,30 @@
     }
     </script>
 
-    <!-- Product Schema for Featured Cameras -->
+    <!-- Equipment Schema for Featured Cameras -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "ItemList",
       "name": "Caméras Spécialisées Entrepôt",
-      "description": "Sélection de caméras professionnelles pour surveillance d'entrepôts",
+      "description": "Exemples de caméras professionnelles utilisées pour la surveillance d'entrepôts",
       "itemListElement": [
         {
-          "@type": "Product",
+          "@type": "Thing",
           "position": 1,
           "name": "Hikvision DS-2CD2387G2-LU ColorVu",
           "description": "Caméra parfaite pour la surveillance des zones de stockage à faible éclairage. Fournit des images couleur 24h/24 grâce à sa technologie ColorVu avancée.",
-          "category": "Caméra de surveillance",
-          "brand": {
-            "@type": "Brand",
-            "name": "Hikvision"
-          },
-          "offers": {
-            "@type": "Offer",
-            "availability": "https://schema.org/InStock",
-            "priceCurrency": "EUR",
-            "seller": {
-              "@type": "Organization",
-              "name": "ZOZO Sécurité"
-            }
-          },
           "additionalProperty": [
+            {
+              "@type": "PropertyValue",
+              "name": "Marque",
+              "value": "Hikvision"
+            },
+            {
+              "@type": "PropertyValue",
+              "name": "Catégorie",
+              "value": "Caméra de surveillance"
+            },
             {
               "@type": "PropertyValue",
               "name": "Technologie",
@@ -228,25 +224,21 @@
           ]
         },
         {
-          "@type": "Product",
+          "@type": "Thing",
           "position": 2,
           "name": "Dahua IPC-HDW3849H-AS-PV Full-Color",
           "description": "Caméra idéale pour la protection périmétrique des entrepôts. Détection intelligente avec alerte active et dissuasion intégrée.",
-          "category": "Caméra de surveillance",
-          "brand": {
-            "@type": "Brand",
-            "name": "Dahua"
-          },
-          "offers": {
-            "@type": "Offer",
-            "availability": "https://schema.org/InStock",
-            "priceCurrency": "EUR",
-            "seller": {
-              "@type": "Organization",
-              "name": "ZOZO Sécurité"
-            }
-          },
           "additionalProperty": [
+            {
+              "@type": "PropertyValue",
+              "name": "Marque",
+              "value": "Dahua"
+            },
+            {
+              "@type": "PropertyValue",
+              "name": "Catégorie",
+              "value": "Caméra de surveillance"
+            },
             {
               "@type": "PropertyValue",
               "name": "Technologie",
@@ -848,102 +840,5 @@
         </div>
     </footer>
 
-    <!-- Floating Quote Request Button -->
-    <div id="floating-quote-btn" class="floating-quote-btn">
-        <a href="../contact.html" class="quote-btn-link">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M14.828 14.828a4 4 0 01-5.656 0M9 10h1M15 10h1M21 12c0 4.97-4.03 9-9 9s-9-4.03-9-9 4.03-9 9-9 9 4.03 9 9z"/>
-            </svg>
-            <span>Demander un devis gratuit</span>
-        </a>
-    </div>
-
-    <style>
-        .floating-quote-btn {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            z-index: 1000;
-            opacity: 0;
-            transform: translateY(100px);
-            transition: all 0.3s ease;
-        }
-
-        .floating-quote-btn.show {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        .quote-btn-link {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            background: linear-gradient(135deg, #FF3333, #FF1111);
-            color: white;
-            padding: 15px 20px;
-            border-radius: 50px;
-            text-decoration: none;
-            font-weight: 600;
-            font-size: 14px;
-            box-shadow: 0 4px 20px rgba(255, 51, 51, 0.3);
-            transition: all 0.3s ease;
-            white-space: nowrap;
-        }
-
-        .quote-btn-link:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 25px rgba(255, 51, 51, 0.4);
-            background: linear-gradient(135deg, #FF1111, #CC0000);
-        }
-
-        .quote-btn-link svg {
-            flex-shrink: 0;
-        }
-
-        @media (max-width: 768px) {
-            .floating-quote-btn {
-                bottom: 15px;
-                right: 15px;
-            }
-
-            .quote-btn-link {
-                padding: 12px 16px;
-                font-size: 13px;
-            }
-
-            .quote-btn-link span {
-                display: none;
-            }
-
-            .quote-btn-link {
-                border-radius: 50%;
-                width: 50px;
-                height: 50px;
-                justify-content: center;
-            }
-        }
-    </style>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const floatingBtn = document.getElementById('floating-quote-btn');
-            let hasShown = false;
-
-            function showButton() {
-                if (!hasShown) {
-                    floatingBtn.classList.add('show');
-                    hasShown = true;
-                }
-            }
-
-            setTimeout(showButton, 2000);
-
-            window.addEventListener('scroll', function() {
-                if (window.scrollY > 100) {
-                    showButton();
-                }
-            });
-        });
-    </script>
 </body>
 </html>
