adding the icons

--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -72,7 +72,9 @@
     <!-- Hero Section -->
     <section class="hero-section">
         <div class="hero-content">
-            <!-- Content will be added step by step -->
+            <div class="split-border-card">
+                <img src="icon/alarme-pour-apartment.svg" alt="Alarme pour appartement" class="card-icon">
+            </div>
         </div>
     </section>
 
@@ -100,6 +102,12 @@
                 <div class="logo-item">
                     <img src="Client-alarme-zozosécurité/aramisauto-alarme-sans-fil.webp" alt="Aramis Auto">
                 </div>
+                <div class="logo-item">
+                    <img src="Client-alarme-zozosécurité/BUT-installateur-alarme-sans-fil.webp" alt="BUT">
+                </div>
+                <div class="logo-item">
+                    <img src="Client-alarme-zozosécurité/le-kiosqueàpizza-installation-alarme-montpellier.svg" alt="Le Kiosque à Pizza">
+                </div>
 
                 <!-- Duplicate set for infinite scroll -->
                 <div class="logo-item">
@@ -116,6 +124,12 @@
                 </div>
                 <div class="logo-item">
                     <img src="Client-alarme-zozosécurité/aramisauto-alarme-sans-fil.webp" alt="Aramis Auto">
+                </div>
+                <div class="logo-item">
+                    <img src="Client-alarme-zozosécurité/BUT-installateur-alarme-sans-fil.webp" alt="BUT">
+                </div>
+                <div class="logo-item">
+                    <img src="Client-alarme-zozosécurité/le-kiosqueàpizza-installation-alarme-montpellier.svg" alt="Le Kiosque à Pizza">
                 </div>
             </div>
         </div>
