--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -72,6 +72,12 @@
     <!-- Hero Section -->
     <section class="hero-section">
         <div class="hero-content">
+            <h1 class="hero-main-title">
+                Un cambriolage toutes les <span class="highlight-number">90</span> secondes<br>
+                Sécurisez votre propriété 24/7<br>
+                Installation rapide<span class="side-note">* sans mensualité et sans engagement</span>
+            </h1>
+
             <div class="split-border-card">
                 <img src="icon/alarme-pour-apartment.svg" alt="Alarme pour appartement" class="card-icon">
                 <div class="card-content-inner">
@@ -106,6 +112,16 @@
                         </svg>
                     </a>
                 </div>
+            </div>
+
+            <!-- CTA Button -->
+            <div class="hero-cta">
+                <a href="#" class="cta-button">
+                    COMMENCER MON DEVIS
+                    <svg class="cta-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3">
+                        <path d="M5 12h14M12 5l7 7-7 7"/>
+                    </svg>
+                </a>
             </div>
         </div>
     </section>
